kubernetes/ba-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ba-database-deployment
  labels:
    app: ba-database
    role: database
spec:
  selector:
    matchLabels:
      app: ba-database
      role: database
  replicas: 1
  template:
    metadata:
      labels:
        app: ba-database
        role: database
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
              subPath: postgres
            - mountPath: /docker-entrypoint-initdb.d
              name: config-initdb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: ba-database-pvc
        - name: config-initdb
          configMap:
            name: ba-postgresql-init-db
