kubernetes/ba-pentaho-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ba-pentaho-service
  labels:
    app: ba-pentaho-service
    role: bi-engine
spec:
  selector:
   app: ba-pentaho
   role: bi-engine
  ports:
    - port: 8080
      targetPort: 8080
